--- a/app/views/customers/addresses/index.html.erb
+++ b/app/views/customers/addresses/index.html.erb
@@ -1,54 +1,68 @@
-<div class="container">
+<div class="container py-5">
   <div class="row">
-    <div class="offset-1">
-      <h2 class="">配送先登録/一覧</h2>
+    <div class="row">
+      <h3><span class="bg-light">配送先登録/一覧</span></h3>
     </div>
-  </div>
-  <div class="row ">
-    <div class="offset-2">
+    </div>
       <%= form_for(@address_new) do |f| %>
-      　<p>郵便番号(ハイフンなし)</p>
-        <div class="form-group row">
-          <%= f.text_field :post_code, class: "form-control", placeholder: "郵便番号" %>
-        </div>
-        <p>住所</p>
-        <div class="form-group row">
-          <%= f.text_field :address, class: "form-control", placeholder: "住所" %>
-        </div>
-        <p>宛名</p>
-        <div class="form-group row">
-          <%= f.text_field :name, class: "form-control col-6", placeholder: "宛名" %>
-        </div>
+        <div class="d-flex align-items-end">
+          <div class="col-md-10">
+            <div class="row">
+          　　 <div class="col-md-3">
+          　　   <p>郵便番号<span style="font-size :13px;">(ハイフンなし)</span></p>
+              </div>
+            　<div class="col-md-4">
+            　  <%= f.text_field :post_code, class: "form-control", placeholder: "郵便番号" %>
+            　</div>
+            </div>
 
-        <div class="row">
-          <%= f.submit "登録する", class: "btn btn-success pull-right" %>
-        </div>
+            <div class="row">
+          　　 <div class="col-md-3">
+                <p>住所</p>
+              </div>
+            　<div class="col-md-7">
+                <%= f.text_field :address, class: "form-control", placeholder: "住所" %>
+            　</div>
+            </div>
+
+            <div class="row">
+          　　 <div class="col-md-3">
+                <p>宛名</p>
+              </div>
+            　<div class="col-md-4">
+                <%= f.text_field :name, class: "form-control", placeholder: "宛名" %>
+            　</div>
+            </div>
+          </div>
+          <div class="col-md-1 clearfix">
+            <%= f.submit "登録する", class: "btn btn-success float-right mb-3" %>
+          </div>
       <% end %>
     </div>
 
-    <div class="">
+    <div class="row col-10">
     <table class="table table-bordered table-hover">
       <thead>
-       <tr class="active">
-         <th class="col-xs-2">郵便番号</th>
-         <th class="col-xs-5">住所</th>
-         <th class="col-xs-2">宛名</th>
-         <th class="col-xs-3"></th>
+       <tr class="table-active">
+         <th>郵便番号</th>
+         <th>住所</th>
+         <th>宛名</th>
+         <th></th>
        <tr>
       </thead>
 
-     <tbody>
-    <% @addresses.each do |address| %>
-    <tr>
-      <td><%= address.post_code %></td>
-      <td><%= address.address %></td>
-      <td><%= address.name %></td>
-      <td class="text-center"><%= link_to "編集する", edit_address_path(address),  class: "btn btn-primary " %>
-          <%= link_to "削除する", address_path(address), method: :delete ,data: { confirm: 'Are you sure?' }, class: "btn btn-danger" %>
-        </td>
-     </tr>
-  <% end %>
-     </tbody>
+      <tbody>
+        <% @addresses.each do |address| %>
+          <tr>
+            <td><%= address.post_code %></td>
+            <td><%= address.address %></td>
+            <td><%= address.name %></td>
+            <td class="text-center"><%= link_to "編集する", edit_address_path(address),  class: "btn btn-primary " %>
+                <%= link_to "削除する", address_path(address), method: :delete ,data: { confirm: 'Are you sure?' }, class: "btn btn-danger" %>
+            </td>
+           </tr>
+        <% end %>
+      </tbody>
     </table>
   </tr>
 </tr>
