--- a/app/views/customers/cart_items/index.html.erb
+++ b/app/views/customers/cart_items/index.html.erb
@@ -1,44 +1,64 @@
-<h1>ショッピングカート</h1>
-<div class="text-right">
-  <%= link_to "カートを空にする", cart_items_path, method: :delete, class: "btn btn-danger" %>
-</div>
-<table class="table table-bordered">
-  <tr class="active">
-    <th>商品名</th>
-    <th>単価(税込)</th>
-    <th>数量</th>
-    <th>小計</th>
-    <th></th>
-  </tr>
-  <% current_customer.cart_items.each do |cart_item| %>
-    <tr>
-      <td><%= cart_item.item.name %>
-        <%= attachment_image_tag cart_item.item, :image, format: 'jpeg', size: "50x50" %>
-      </td>
-      <td><%= (cart_item.item.price * Constants::TAX).round %>円</td>
-      <td>
-        <%= form_for (cart_item) do |f|%>
-        <%= f.number_field :quantity, min:1 %>
-        <%= f.submit "変更", class: "btn btn-primary" %>
-        <% end %>
-      </td>
-      <td><%= cart_item.subtotal_price %></td>
-      <td><%= link_to "削除する", cart_item_path(cart_item), method: :delete, class: "btn btn-danger" %></td>
-    </tr>
-  <% end %>
-</table>
+<div class="container py-5">
+  <div class="row">
+      <div class="row col-12">
+        <div class="col-md-4 pb-3">
+          <h3><span class="bg-light">ショッピングカート</span></h3>
+        </div>
+        <div class="col-md-3 offset-md-5 ">
+          <span class= "float-right"><%= link_to "カートを空にする", cart_items_path, method: :delete, class: "btn btn-danger" %></span>
+        </div>
+      </div>
+      <div class="row w-100">
+        <table class="table table-bordered">
+          <tr class="table-active">
+            <th>商品名</th>
+            <th>単価(税込)</th>
+            <th>数量</th>
+            <th>小計</th>
+            <th></th>
+          </tr>
+          <% current_customer.cart_items.each do |cart_item| %>
+            <tr>
+              <td><%= cart_item.item.name %>
+                <%= attachment_image_tag cart_item.item, :image, format: 'jpeg', size: "50x50" %>
+              </td>
+              <td><%= (cart_item.item.price * Constants::TAX).round %>円</td>
+              <td>
+                <%= form_for (cart_item) do |f|%>
+                <%= f.number_field :quantity, min:1 %>
+                <%= f.submit "変更", class: "btn btn-primary" %>
+                <% end %>
+              </td>
+              <td><%= cart_item.subtotal_price %></td>
+              <td><%= link_to "削除する", cart_item_path(cart_item), method: :delete, class: "btn btn-danger" %></td>
+            </tr>
+          <% end %>
+        </table>
+      </div>
 
-<div class="">
-  <%= link_to "買い物を続ける", root_path, class: "btn btn-primary" %>
-</div>
-<div class="">合計金額</div>
-<td class="text-right"><%= @customer.cart_item_sum %>円</td>
-<div class="">
-  <% if current_customer.cart_items.present? %>
-    <div class="">
-      <%= link_to "情報入力に進む", new_order_path, class:"btn btn-primary" %>
+
+  <div class="row col-12">
+    <div class="col-md-4">
+      <%= link_to "買い物を続ける", root_path, class: "btn btn-primary" %>
     </div>
-  <% else %>
-   <p>商品が選択されていません。</p>
-  <% end %>
+    <div class="col-md-4 offset-md-4">
+      <table class="table table-bordered">
+        <tr>
+          <th class="table-active">合計金額</th>
+          <th><%= @customer.cart_item_sum %>円</th>
+        </tr>
+      </table>
+    </div>
+  </div>
+
+    <div class="row -col-12 mx-auto pt-4">
+        <% if current_customer.cart_items.present? %>
+          <div class="">
+            <%= link_to "情報入力に進む", new_order_path, class:"btn btn-primary" %>
+          </div>
+        <% else %>
+          <p>商品が選択されていません。</p>
+        <% end %>
+    </div>
+  </div>
 </div>
