--- a/app/views/customers/items/index.html.erb
+++ b/app/views/customers/items/index.html.erb
@@ -1,34 +1,38 @@
-<div class="container">
+<div class="container py-5">
   <div class="row">
     <%= render "layouts/genre_search", genres: @genres %>
 
 
     <div class="col-md-9">
-      <% if params[:genre_id] %>
-      <h3><%= @genre.name %>一覧</h3>
-
-
-      <% else %>
-      <h3>商品一覧</h3>
-      <% end %>
-      <strong>(全<%= @items.count %>件)</strong>
-
-
-      <div class="flex">
-        <% @items.each do |item| %>
-        <%= link_to item_path(item.id), :style=>"color: black; text-decoration: none;" do%>
-        　<%= attachment_image_tag item, :image, format: 'jpeg', size: "100x100", fallback: "no_image.jpg",
-        class: "offset-md-2" %>
-        <p><%= item.name %></p>
-        <p>¥<%= item.price %></p>
+      <div class= "row d-flex align-items-baseline">
+        <% if params[:genre_id] %>
+        　 <div><h2><%= @genre.name %>一覧</h2></div>
+        <% else %>
+          <div><h2>商品一覧</h2></div>
         <% end %>
-      <% end %>
-    </div>
-  </div>
-</div>
+          <div><span class="align-middle">(全<%= @items.count %>件)<span></div>
+      </div>
 
-<div class = "row">
-        <div class = "offset-md-4">
+      <div class="d-flex flex-wrap align-content-around">
+          <% @items.each do |item| %>
+          <div class="col-3">
+            <%= link_to item_path(item.id), :style=>"color: black; text-decoration: none;" do%>
+            　<%= attachment_image_tag item, :image, format: 'jpeg', size: "100x100", fallback: "no_image.jpg",
+            class: "" %>
+              <p><%= item.name %></p>
+              <p>¥<%= item.price %></p>
+            <% end %>
+          </div>
+        <% end %>
+      </div>
+
+      <div class = "row">
+        <div class = "mx-auto">
           <%= paginate @items %>
         </div>
       </div>
+
+      </div>
+    </div>
+  </div>
+</div>
