--- a/app/views/customers/items/show.html.erb
+++ b/app/views/customers/items/show.html.erb
@@ -1,13 +1,26 @@
-<%= render "layouts/genre_search", genres: @genres %>
-
-<!-- 画像 -->
-<%= attachment_image_tag @item, :image, format: 'jpeg', size: "100x100", fallback: "no_image.jpg",
-        class: "offset-md-2" %>
-<h2><%= @item.name %></h2>
-<p><%= @item.introduction %></p>
-<h1>￥<%= (@item.price * Constants::TAX).round %>(税込)</h1>
-<%= form_for @cart_item do |f| %>
-<%= f.number_field :quantity, min:1, placeholder: "個数選択" %>
-<%= f.hidden_field :item_id, :value => @item.id %>
-<%= f.submit "カートに入れる", class: "btn btn-primary" %>
-<% end %>
+<div class="container py-5">
+  <div class="row">
+		<%= render "layouts/genre_search", genres: @genres %>
+		<div class="col-md-9　">
+			<div class="container">
+				<div class="row align-items-end">
+					<div class="col-md-6">
+					<!-- 画像 -->
+					<%= attachment_image_tag @item, :image, format: 'jpeg', size: "300x300", fallback: "no_image.jpg",
+					        class: "" %>
+					</div>
+					<div class="col-md-6">
+						<h4><%= @item.name %></h4>
+						<p><%= @item.introduction %></p>
+						<h4>￥<%= (@item.price * Constants::TAX).round %>(税込)</h4>
+					 		<%= form_for @cart_item do |f| %>
+							<%= f.number_field :quantity, min:1, placeholder: "個数選択" %>
+							<%= f.hidden_field :item_id, :value => @item.id %>
+							<%= f.submit "カートに入れる", class: "btn btn-primary btn-sm" %>
+							<% end %>
+				  </div>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
