--- a/app/views/customers/orders/confirm.html.erb
+++ b/app/views/customers/orders/confirm.html.erb
@@ -1,70 +1,73 @@
-<h1>注文情報確認</h1>
-<table class="table">
-  <thead>
-    <tr>
-      <th>商品名</th>
-      <th>単価(税込)</th>
-      <th>数量</th>
-      <th>小計</th>
-    </tr>
-  </thead>
-  <tbody>
-    <% current_customer.cart_items.each do |cart_item| %>
-      <tr>
-        <td><%= cart_item.item.name %></td>
-        <td><%= (cart_item.item.price * Constants::TAX).round %>円</td>
-        <td><%= cart_item.quantity %></td>
-        <td><%= cart_item.subtotal_price %>円</td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<div class="confirm-prise">
-          <table class="table">
-            <tbody>
+<div class="container py-5">
+  <div class="row">
+    <h3><span class="bg-light">注文情報確認</span></h3>
+    <div class="row col-12 w-100">
+      <div class="row col-8">
+        <table class="table table-bordered w-100">
+          <thead>
+            <tr class="table-active">
+              <th>商品名</th>
+              <th>単価(税込)</th>
+              <th>数量</th>
+              <th>小計</th>
+            </tr>
+          </thead>
+          <tbody>
+            <% current_customer.cart_items.each do |cart_item| %>
               <tr>
-                <th class="active">送料</th>
-                <td class="text-right"><%= @order.shipping_cost %>円</td>
+                <td><%= cart_item.item.name %></td>
+                <td><%= (cart_item.item.price * Constants::TAX).round %>円</td>
+                <td><%= cart_item.quantity %></td>
+                <td><%= cart_item.subtotal_price %>円</td>
               </tr>
-              <tr>
-                <th class="active">商品合計</th>
-                <td class="text-right"><%= current_customer.cart_items.inject(0){|sum, cart_item| cart_item.subtotal_price + sum} %>円</td>
-              </tr>
-              <tr>
-                <th class="active">請求金額</th>
-                <td class="text-right"><%= @order.billing_amount %>円</td>
-              </tr>
-            </tbody>
-          </table>
-        </div>
+            <% end %>
+          </tbody>
+        </table>
       </div>
+      <div class="col-4">
+        <table class="table table-bordered">
+          <tbody>
+            <tr class="table-active">
+              <th>送料</th>
+              <td class="text-right"><%= @order.shipping_cost %>円</td>
+            </tr>
+            <tr>
+              <th>商品合計</th>
+              <td class="text-right"><%= current_customer.cart_items.inject(0){|sum, cart_item| cart_item.subtotal_price + sum} %>円</td>
+            </tr>
+            <tr>
+              <th>請求金額</th>
+              <td class="text-right"><%= @order.billing_amount %>円</td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+    </div>
 
-<div class="">
-  <table>
-    <tr>
-      <th class="col-xs-4">お支払い方法</th>
-      <td class="col-xs-8"><%= @order.payment_method %></td>
-    </tr>
-    <tr>
-      <th class="col-xs-4">お届け先</th>
-      <td class="col-xs-8">
-        <%= @order.postal_code %><br>
-        <%= @order.shipping_address %><br>
-        <%= @order.delivery_name %>
-      </td>
-    </tr>
-  </table>
-</div>
-
-<div class="">
-  <%= form_for @order do |f| %>
-    <%= f.hidden_field :postal_code, value: @order.postal_code %>
-    <%= f.hidden_field :billing_amount, value: @order.billing_amount %>
-    <%= f.hidden_field :shipping_address, value: @order.shipping_address %>
-    <%= f.hidden_field :delivery_name, value: @order.delivery_name %>
-    <%= f.hidden_field :payment_method, value: @order.payment_method %>
-    <%= f.submit "購入を確定する", class:"btn btn-primary" %>
-  <% end %>
-
+    <div class="row col-12">
+      <div class="row col-12 px-3 mt-3">
+        <strong>支払方法</strong>
+        <span class="px-3"><%= @order.payment_method %></span>
+      </div>
+      <div class="row col-12 px-3 mt-3">
+        <strong>お届け先</strong>
+        <span class="px-3">
+          <%= @order.postal_code %><%= @order.shipping_address %><br>
+          <%= @order.delivery_name %>
+        </span>
+      </div>
+    </div>
+    <div class = "row col-12">
+      <div class="mx-auto pt-4">
+      <%= form_for @order do |f| %>
+        <%= f.hidden_field :postal_code, value: @order.postal_code %>
+        <%= f.hidden_field :billing_amount, value: @order.billing_amount %>
+        <%= f.hidden_field :shipping_address, value: @order.shipping_address %>
+        <%= f.hidden_field :delivery_name, value: @order.delivery_name %>
+        <%= f.hidden_field :payment_method, value: @order.payment_method %>
+        <%= f.submit "購入を確定する", class:"btn btn-primary" %>
+      <% end %>
+      </div>
+    </div>
+  </div>
 </div>
