--- a/app/views/customers/orders/index.html.erb
+++ b/app/views/customers/orders/index.html.erb
@@ -1,11 +1,10 @@
-<div class="container">
+<div class="container py-5">
 	<div class="row">
-		<div class="col-xs-10 col-xs-offset-1">
-			<h2>注文履歴一覧</h2>
-			<div class="orders-table">
-				<table class="table">
+		  <h3><span class="bg-light">注文履歴一覧</span></h3>
+			<div class="w-100">
+				<table class="table table-bordered w-100">
 					<thead>
-						<tr class="active">
+						<tr class="table-active">
 							<th>注文日</th>
 							<th>配送先</th>
 							<th>注文商品</th>
@@ -29,17 +28,16 @@
 							</td>
 							<td><%= order.billing_amount %>円</td>
 							<td><%= order.order_status %></td>
-							<td><%= link_to "表示する", order_path(order.id), class:"btn btn-primary" %></td>
+							<td class="text-center"><%= link_to "表示する", order_path(order.id), class:"btn btn-primary" %></td>
 						</tr>
 						<% end %>
 					</tbody>
 				</table>
+				<div class = "row">
+					<div class="mx-auto pt-4">
+						<%= paginate @orders %>
+					</div>
+			  	</div>
 			</div>
-			<div class = "row">
-				<div class = "offset-md-4">
-					<%= paginate @orders %>
-				</div>
-			</div>
-		</div>
 	</div>
 </div>
