--- a/app/views/customers/orders/new.html.erb
+++ b/app/views/customers/orders/new.html.erb
@@ -1,71 +1,89 @@
-<h1>注文情報入力</h1>
-
-<h3>支払い方法</h3>
-
-
-<%= form_for(@order, url: orders_confirm_path) do |f| %>
-
-  <div class="">
-    <h4>
-      <%= f.radio_button :payment_method, "クレジットカード", checked: true %>
-      <%= f.label(:payment_method, "クレジットカード")%>
-    </h4>
-  </div>
-
-  <div class="">
-    <h4>
-
-      <%= f.radio_button :payment_method, "銀行振込" %>
-      <%= f.label(:payment_method, "銀行振込")%>
-    </h4>
-  </div>
-
-  <h3>お届け先</h3>
-
-  <div class="">
-    <h4>
-      <%= radio_button_tag :shipping_address_type, "ご自身の住所", checked: true %>
-      <%= f.label :shipping_address, "ご自身の住所" %>
-      <%= current_customer.postel_code + current_customer.address + current_customer.family_name + current_customer.first_name %>
-    </h4>
-  </div>
-
-  <div class="">
-    <h4>
-      <%= radio_button_tag :shipping_address_type, "登録済み住所から選択" %>
-      <%= f.label :shipping_address, "登録済み住所から選択" %>
-      <%= f.fields_for @address do |t| %>
-        <p><%= t.select(:id, current_customer.addresses.map { |a| [a.full_address, a.id]}) %></p>
-      <% end %>
-    </h4>
-  </div>
-
-
-  <div class="">
-    <h4>
-      <%= radio_button_tag :shipping_address_type, "新しいお届け先"%>
-      <%= f.label :shipping_address, "新しいお届け先" %>
-    </h4>
-  </div>
-
+<div class="container py-5">
   <div class="row">
-    <div class="">
-      <%= f.label :postal_code, "郵便番号(ハイフンなし)" %>
-      <%= f.text_field :postal_code %>
-    </div>
-
-    <div class="">
-      <%= f.label :shipping_address, "住所" %>
-      <%= f.text_field :shipping_address %>
-    </div>
-
-    <div class="">
-      <%= f.label :delivery_name, "宛名" %>
-      <%= f.text_field :delivery_name %>
-    </div>
-    <div class="">
-      <%= f.submit :"確認画面へ進む", :class => "btn btn-primary" %>
-    </div>
+    <h3><span class="bg-light">注文情報入力</span></h3>
   </div>
+    <div class="row">
+      <%= form_for(@order, url: orders_confirm_path) do |f| %>
+      <h5 class="ml-n5"><strong>支払い方法</strong></h5>
+      <div class="row">
+        <div class="col-12">
+          <p>
+            <%= f.radio_button :payment_method, "クレジットカード", checked: true %>
+            <%= f.label(:payment_method, "クレジットカード")%>
+          </p>
+        </div>
 
-<% end %>
+        <div class="col-12">
+          <h6>
+            <%= f.radio_button :payment_method, "銀行振込" %>
+            <%= f.label(:payment_method, "銀行振込")%>
+          </h6>
+        </div>
+      </div>
+
+        <h5 class="ml-n5"><strong>お届け先</strong></h5>
+          <div class="row">
+            <div class="col-12">
+              <h4>
+                <%= radio_button_tag :shipping_address_type, "ご自身の住所", checked: true %>
+                <%= f.label :shipping_address, "ご自身の住所" %>
+                <%= current_customer.postel_code + current_customer.address + current_customer.family_name + current_customer.first_name %>
+              </h4>
+            </div>
+
+            <div class="col-12">
+              <h6>
+                <%= radio_button_tag :shipping_address_type, "登録済み住所から選択" %>
+                <%= f.label :shipping_address, "登録済み住所から選択" %>
+                <%= f.fields_for @address do |t| %>
+                  <p class="pl-3"><%= t.select(:id, current_customer.addresses.map { |a| [a.full_address, a.id]}) %></p>
+                <% end %>
+              </h6>
+            </div>
+
+            <div class="col-12">
+              <h6>
+                <%= radio_button_tag :shipping_address_type, "新しいお届け先"%>
+                <%= f.label :shipping_address, "新しいお届け先" %>
+              </h6>
+            </div>
+
+            <div class="col-md-10">
+              <div class="row">
+            　　 <div class="col-md-3">
+                  <%= f.label :postal_code, "郵便番号(ハイフンなし)" %>
+                </div>
+              　<div class="col-md-4">
+                  <%= f.text_field :postal_code %>
+              　</div>
+              </div>
+
+              <div class="row">
+            　　 <div class="col-md-3">
+                  <%= f.label :shipping_address, "住所" %>
+                </div>
+              　<div class="col-md-8 ">
+                  <%= f.text_field :shipping_address , class: "w-75" %>
+              　</div>
+              </div>
+
+              <div class="row">
+            　　 <div class="col-md-3">
+                  <%= f.label :delivery_name, "宛名" %>
+                </div>
+              　<div class="col-md-4">
+                  <%= f.text_field :delivery_name %>
+              　</div>
+              </div>
+            </div>
+            <div class = "row col-12">
+              <div class="mx-auto pt-4">
+                <%= f.submit :"確認画面へ進む", :class => "btn btn-primary" %>
+              </div>
+            </div>
+          </div>
+      <% end %>
+
+<!--  -->
+ </div>
+</div>
