--- a/app/views/customers/orders/show.html.erb
+++ b/app/views/customers/orders/show.html.erb
@@ -1,93 +1,86 @@
-<div class="container">
+<div class="container py-5">
 	<div class="row">
-		<div class="order-show col-xs-10 col-xs-offset-1">
-			<h2>注文履歴詳細</h2>
-			<div class="row">
-				<!-- 注文情報 -->
-				<div class=" order-info col-xs-7">
-					<h3>注文情報</h3>
-					<div class="order-table">
-						<table class="table">
-							<tbody>
-								<tr>
-									<th class="active">注文日</th>
-									<td><%= @order.created_at.strftime('%Y/%m/%d') %></td>
-								</tr>
-								<tr>
-									<th class="active">配送先</th>
-									<td>
-										<%= @order.postal_code %><br>
-										<%= @order.shipping_address %><br>
-										<%= @order.delivery_name %>
-									</td>
-								</tr>
-								<tr>
-									<th class="active">支払方法</th>
-									<td><%= @order.payment_method %></td>
-								</tr>
-								<tr>
-									<th class="active">ステータス</th>
-									<td><%= @order.order_status %></td>
-								</tr>
-							</tbody>
-						</table>
-					</div>
-				</div>
-				<!-- 請求情報 -->
-				<div class="col-xs-3">
-					<h3>請求情報</h3>
-					<div>
-						<table class="table">
-							<tbody>
-								<tr>
-									<th class="active">商品合計</th>
-									<td class="text-right">
-									   <% sum_all = 0 %>
-									   <% @order.order_items.each do |order_item| %>
-									   <%= sub_total = (order_item.order_price).to_i * order_item.quantity %>円
-					                   <% sum_all += sub_total %>
-					                   <% end %>
-					                   </td>
-								</tr>
-								<tr>
-									<th class="active">配送料</th>
-									<td class="text-right"><%= @order.shipping_cost %>円</td>
-								</tr>
-								<tr>
-									<th class="active">ご請求額</th>
-									<td class="text-right"><%= @order.billing_amount %>円</td>
-								</tr>
-							</tbody>
-						</table>
-					</div>
-				</div>
+		 <h3><span class="bg-light">注文履歴詳細</span></h3>
+		 <div class="row col-12">
+			<!-- 注文情報 -->
+			<div class="row col-8">
+				<h6>注文情報</h6>
+				<table class="table table-">
+					<tbody>
+						<tr>
+							<th class="table-active">注文日</th>
+							<td><%= @order.created_at.strftime('%Y/%m/%d') %></td>
+						</tr>
+						<tr>
+							<th class="table-active">配送先</th>
+							<td>
+								<%= @order.postal_code %><br>
+								<%= @order.shipping_address %><br>
+								<%= @order.delivery_name %>
+							</td>
+						</tr>
+						<tr>
+							<th class="table-active">支払方法</th>
+							<td><%= @order.payment_method %></td>
+						</tr>
+						<tr>
+							<th class="table-active">ステータス</th>
+							<td><%= @order.order_status %></td>
+						</tr>
+					</tbody>
+				</table>
 			</div>
-			<!-- 注文内容 -->
-			<div class="row">
-				<div class="col-xs-8">
-					<h3>注文内容</h3>
-					<div>
-						<table class="table">
-							<thead>
-								<tr>
-									<th class="active">商品</th>
-									<th class="active">単価（税込）</th>
-									<th class="active">個数</th>
-									<th class="active">小計</th>
-								</tr>
-							</thead>
-							<tbody>
-								<% @order.order_items.each do |order_item| %>
-								<tr>
-									<td><%= order_item.item.name %></td>
-									<td class="text-right"><%= order_item.order_price %>円</td>
-									<td class="text-right"><%= order_item.quantity %></td>
-									<td class="text-right"><%= order_item.subtotal_price %>円</td><!-- .subtotal_priceはorder_itemモデルで定義あり -->
-								</tr>
-								<% end %>
-							</tbody>
-						</table>
-					</div>
+			<!-- 請求情報 -->
+			<div class="col-4">
+				<h6>請求情報</h6>
+				<table class="table table-bordered">
+					<tbody>
+						<tr>
+							<th class="table-active">商品合計</th>
+							<td class="text-right">
+							  <% sum_all = 0 %>
+							  <% @order.order_items.each do |order_item| %>
+							  <%= sub_total = (order_item.order_price).to_i * order_item.quantity %>円
+                <% sum_all += sub_total %>
+                <% end %>
+              </td>
+						</tr>
+							<th class="table-active">配送料</th>
+							<td class="text-right"><%= @order.shipping_cost %>円</td>
+						</tr>
+						<tr>
+							<th class="table-active">ご請求額</th>
+							<td class="text-right"><%= @order.billing_amount %>円</td>
+						</tr>
+					</tbody>
+				</table>
+		  </div>
+		</div>
+		<!-- 注文内容 -->
+		<div class="row col-12">
+			<div class="col-6">
+				<h6>注文内容</h6>
+				<div>
+					<table class="table table-bordered">
+						<thead class="table-active">
+							<tr>
+								<th>商品</th>
+								<th>単価（税込）</th>
+								<th>個数</th>
+								<th>小計</th>
+							</tr>
+						</thead>
+						<tbody>
+							<% @order.order_items.each do |order_item| %>
+							<tr>
+								<td><%= order_item.item.name %></td>
+								<td class="text-right"><%= order_item.order_price %>円</td>
+								<td class="text-right"><%= order_item.quantity %></td>
+								<td class="text-right"><%= order_item.subtotal_price %>円</td><!-- .subtotal_priceはorder_itemモデルで定義あり -->
+							</tr>
+							<% end %>
+						</tbody>
+					</table>
 				</div>
 			</div>
 		</div>
