--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -91,5 +91,11 @@
       </div>
     </header><!-- /header -->
     <%= yield %>
+  <footer>
+    <div class=" container mw-100 h-100 bg-success " style="height: 50px">
+        <div class="row justify-content-center py-2">
+          ©2020 example
+        </div>
+    </div>
   </body>
 </html>
