[Add] bootstrap4　修正２

--- a/app/views/customers/homes/about.html.erb
+++ b/app/views/customers/homes/about.html.erb
@@ -1,12 +1,9 @@
-<div class=“about”>
-    <h1>About</h1>
-    <p>ながのCakeは全国発送可能なケーキ屋さんです。<br>
+<div class = "container text-center mb-5">
+    <h1 style = "font-size:100px;">About</h1>
+    <p style = "font-size:30px;">ながのCakeは全国発送可能なケーキ屋さんです。<br>
     お子様からお年寄りの方までお召し上がりいただけるよう、<br>
     様々なバリエーションをご用意しております。<br>
     また、全国へ発送可能ですので「いつ」でも「どこ」でもご注文いただけます。<br>
     ぜひご注文ください。</p>
+    <%= image_tag 'about_img.jpeg', size: '700x400' %>
 </div>
-<!-- <style>
-  .about{
-    text-align: center;
-  } -->
