--- a/app/views/customers/_customer_form_item.html.erb
+++ b/app/views/customers/_customer_form_item.html.erb
@@ -24,13 +24,13 @@
     <%= f.label "（セイ）", :style => 'font-size:10px;' %>
   </div>
   <div class = "col-md-4">
-    <%= f.text_field :family_name, placeholder: "例)ヤマダ", class: "w-100" %>
+    <%= f.text_field :family_name_kana, placeholder: "例)ヤマダ", class: "w-100" %>
   </div>
   <div class = "col-md-1">
     <%= f.label "（メイ）", :style => 'font-size:10px;' %>
   </div>
   <div class = "col-md-3">
-    <%= f.text_field :first_name, placeholder: "例)ハナコ", class: "w-100" %>
+    <%= f.text_field :first_name_kana, placeholder: "例)ハナコ", class: "w-100" %>
   </div>
 </div>
 
