--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -90,10 +90,10 @@
       </div>
     </div>
   <% end %>
-
     <%= yield %>
-  <footer>
-    <div class=" container mw-100 h-100 bg-success " style="height: 50px">
+  <footer class="container-fluid mt-4">
+    <div class=" container mw-100 " style="height: 50px;"></div>
+    <div class=" container mw-100 bg-success fixed-bottom " style="height: 50px;">
         <div class="row justify-content-center py-2">
           ©2020 example
         </div>
