[update]css(bootstrap)

--- a/app/views/admins/customers/show.html.erb
+++ b/app/views/admins/customers/show.html.erb
@@ -2,9 +2,7 @@
 
 	<div class="row">
 		<div class="col mt-3">
-
-
-<h2><%= @full_name %>さんの会員詳細</h2>
+	<h3><span class = "px-4 bg-light"><%= @full_name %>さんの会員詳細</span></h3>
 	<table class="table table-borderless">
 		<tbody>
 			<tr>
