--- a/app/views/admins/customers/index.html.erb
+++ b/app/views/admins/customers/index.html.erb
@@ -3,7 +3,7 @@
 	<div class="row">
 		<div class="col mt-3">
 
-			<h2>会員一覧</h2>
+    <h3><span class = "px-4 bg-light">会員一覧</span></h3>
 
 	<div class="row">
 		<div class="col-12">
