--- a/app/views/admins/orders/index.html.erb
+++ b/app/views/admins/orders/index.html.erb
@@ -2,8 +2,7 @@
 
 	<div class="row">
 		<div class="col mt-3">
-
-<h2>注文履歴一覧</h2>
+	<h3><span class = "px-4 bg-light">注文履歴一覧</span></h3>
 	<div class="col-xs=9">
 		<table class="table table-striped">
 			<thead>
