--- a/app/views/admins/orders/show.html.erb
+++ b/app/views/admins/orders/show.html.erb
@@ -3,9 +3,7 @@
 	<div class="row">
 		<div class="col mt-3">
 
-
-
-<h2>注文履歴詳細</h2>
+	<h3><span class = "px-4 bg-light">注文履歴詳細</span></h3>
 	<table class="table">
 		<tbody>
 			<tr>
