--- a/app/views/customers/homes/top.html.erb
+++ b/app/views/customers/homes/top.html.erb
@@ -26,7 +26,7 @@
           </div>
         <% end %>
       </div>
-      <%= link_to 'もっと見る', items_path %>
+      <div class="float-right"><%= link_to 'もっと見る', items_path %></div>
     </div>
   </div>
 </div>
