--- a/app/views/admins/homes/top.html.erb
+++ b/app/views/admins/homes/top.html.erb
@@ -1,11 +1,11 @@
-<div class="container">
+<div class = "container">
 
-	<div class="row">
-		<div class="col-md-6 col-xl-3 mt-3">
+	<div class = "row my-5">
+		<div class = "offset-md-1">
 
-<h2>管理者画面</h2>
+<h3><span class = "px-4 bg-light">管理者画面</span></h3>
 
-		<p>本日の注文件数</p>
+		<p class="mt-5">本日の注文件数</p>
 
       	<p><%= link_to admins_today_orders_path do %>
         <%= Order.where(created_at:  Time.zone.now.all_day).count %>
