--- a/app/views/admins/customers/index.html.erb
+++ b/app/views/admins/customers/index.html.erb
@@ -1,9 +1,12 @@
-<div class="container">
+<div class = "container">
 
-	<div class="row">
-		<div class="col mt-3">
+	<div class = "row my-5">
+		<div class = "offset-md-1">
 
-			<h2>会員一覧</h2>
+			<h3><span class = "px-4 bg-light">会員一覧</span></h3>
+
+		</div>
+	</div>
 
 	<div class="row">
 		<div class="col-12">
@@ -39,9 +42,8 @@
 		</div>
 	</div>
 
-		</div>
-	</div>
 </div>
+
 	<div class = "row">
 		<div class = "mx-auto">
 			<%= paginate @customers %>
