--- a/app/views/customers/orders/new.html.erb
+++ b/app/views/customers/orders/new.html.erb
@@ -24,10 +24,11 @@
         <h5 class="ml-n5"><strong>お届け先</strong></h5>
           <div class="row">
             <div class="col-12">
-              <h4>
+              <h4 style="font-size:16px;">
                 <%= radio_button_tag :shipping_address_type, "ご自身の住所", checked: true %>
-                <%= f.label :shipping_address, "ご自身の住所" %>
-                <%= current_customer.postel_code + current_customer.address + current_customer.family_name + current_customer.first_name %>
+                <%= f.label :shipping_address, "ご自身の住所" %><br>
+                <%= "　" + current_customer.postel_code + "　" + current_customer.address %><br>
+                <%= "　" + current_customer.family_name + current_customer.first_name %>
               </h4>
             </div>
 
