--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,12 +12,11 @@
   </head>
 
   <body>
-
-<% if admin_signed_in? %>
+    <% if admin_signed_in? %>
   <header style = "height:180px;border-bottom:1px solid black;background-color:purple;">
-<% else %>
+    <% else %>
   <header style = "height:140px;border-bottom:1px solid black;background-color:purple;">
-<% end %>
+    <% end %>
   <nav class="navbar navbar-expand-md navbar-light pt-4 mb-n3" >
     <a class="navbar-brand" href="/">
       <%= link_to root_path do %>
@@ -82,19 +81,19 @@
         <% end %>
       </ul>
     </div>
-  </div>
-
-<div class="collapse navbar-collapse flex-wrap">
-  <div class="navbar-nav ml-auto">
+  </nav>
 
   <% if admin_signed_in? %>
+    <div class = "row w-100">
+      <div class = "col-md-12 text-right">
         <%= form_tag(admins_searches_path, method: :get) do %>
           <%= text_field_tag(:word) %>
           <%= select_tag 'range', options_for_select([['会員検索','1'],['商品検索','2']]) %>
           <%= submit_tag '検索', class: "btn btn-primary" %>
         <% end %>
+      </div>
+    </div>
   <% end %>
-
 </header><!-- /header -->
     <%= yield %>
   <footer class="container-fluid mt-4">
