[Add] 注文一覧修正

--- a/app/views/admins/customers/show.html.erb
+++ b/app/views/admins/customers/show.html.erb
@@ -53,6 +53,6 @@
 
 	<%= link_to "編集する", edit_admins_customer_path(@customer.id), class: "btn-sm btn-success" %>
 
-	<%= link_to "注文履歴一覧を見る", admins_order_path(@customer.id), class: "btn-sm btn-success" %>
+	<%= link_to "注文履歴一覧を見る", admins_orders_customer_path(@customer.id), class: "btn-sm btn-success" %>
 
 </div>
