--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,95 +13,103 @@
 
   <body>
     <% if admin_signed_in? %>
-  <header style = "height:180px;border-bottom:1px solid black;background-color:purple;">
+      <header style = "height:180px;border-bottom:1px solid black;background-color:purple;">
+        <nav class="navbar navbar-expand-md navbar-light pt-4 mb-n3" >
+          <a class="navbar-brand" href="/">
+            <%= link_to admins_root_path do %>
+              <%= image_tag 'logo4_img.png', size: '300x100' %>
+            <% end %>
+          </a>
     <% else %>
-  <header style = "height:140px;border-bottom:1px solid black;background-color:purple;">
+      <header style = "height:140px;border-bottom:1px solid black;background-color:purple;">
+      <nav class="navbar navbar-expand-md navbar-light pt-4 mb-n3" >
+        <a class="navbar-brand" href="/">
+          <%= link_to root_path do %>
+            <%= image_tag 'logo4_img.png', size: '300x100' %>
+          <% end %>
+        </a>
     <% end %>
-  <nav class="navbar navbar-expand-md navbar-light pt-4 mb-n3" >
-    <a class="navbar-brand" href="/">
-      <%= link_to root_path do %>
-        <%= image_tag 'logo4_img.png', size: '300x100' %>
-      <% end %>
-    </a>
 
-    <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#bs-navi" aria-controls="bs-navi" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
+          <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#bs-navi" aria-controls="bs-navi" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
 
-    <div class="collapse navbar-collapse" id="bs-navi">
-      <ul class="navbar-nav ml-auto">
-        <!-- 管理者ログイン後 -->
+          <div class="collapse navbar-collapse" id="bs-navi">
+            <ul class="navbar-nav ml-auto">
+              <!-- 管理者ログイン後 -->
+              <% if admin_signed_in? %>
+                <li class = "nav-item m-2">
+                  <%= link_to "商品一覧", admins_items_path, class: "btn btn-info" %>
+                </li>
+                <li class = "nav-item m-2">
+                  <%= link_to "会員一覧", admins_customers_path, class: "btn btn-info" %>
+                </li>
+                <li class = "nav-item m-2">
+                  <%= link_to "注文履歴一覧", admins_orders_path, class: "btn btn-info" %>
+                </li>
+                <li class = "nav-item m-2">
+                  <%= link_to "ジャンル一覧", admins_genres_path, class: "btn btn-info" %>
+                </li>
+                <li class = "nav-item m-2">
+                  <%= link_to "ログアウト", destroy_admin_session_path, method: :delete, class: "btn btn-warning" %>
+                </li>
+              <!-- 会員ログイン後 -->
+              <% elsif customer_signed_in? %>
+                <li class = "nav-item ml-5 pt-2 text-light">
+                  ようこそ、<%= current_customer.family_name %><%= current_customer.first_name %>さん！
+                </li>
+                <li class = "nav-item ml-5">
+                  <%= link_to "マイページ", customers_path, class: "btn btn-info" %>
+                </li>
+                <li class = "nav-item ml-5">
+                  <%= link_to "商品一覧", items_path, class: "btn btn-info" %>
+                </li>
+                <li class = "nav-item ml-5">
+                  <%= link_to "カート", cart_items_path, class: "btn btn-info" %>
+                </li>
+                <li class = "nav-item mr-5 ml-5">
+                  <%= link_to "ログアウト", destroy_customer_session_path, method: :delete, class: "btn btn-warning" %>
+                </li>
+              <!-- ログイン前 -->
+              <% else %>
+                <li class = "nav-item ml-5">
+                  <%= link_to "About", homes_about_path, class: "btn btn-info" %>
+                </li>
+                <li class = "nav-item ml-5">
+                  <%= link_to "商品一覧", items_path, class: "btn btn-info" %>
+                </li>
+                <li class = "nav-item ml-5">
+                  <%= link_to "新規登録", new_customers_registration_path, class: "btn btn-info" %>
+                </li>
+                <li class = "nav-item mr-5 ml-5">
+                  <%= link_to "ログイン", new_customer_session_path, class: "btn btn-warning" %>
+                </li>
+              <% end %>
+            </ul>
+          </div>
+        </nav>
+
         <% if admin_signed_in? %>
-          <li class = "nav-item m-2">
-            <%= link_to "商品一覧", admins_items_path, class: "btn btn-info" %>
-          </li>
-          <li class = "nav-item m-2">
-            <%= link_to "会員一覧", admins_customers_path, class: "btn btn-info" %>
-          </li>
-          <li class = "nav-item m-2">
-            <%= link_to "注文履歴一覧", admins_orders_path, class: "btn btn-info" %>
-          </li>
-          <li class = "nav-item m-2">
-            <%= link_to "ジャンル一覧", admins_genres_path, class: "btn btn-info" %>
-          </li>
-          <li class = "nav-item m-2">
-            <%= link_to "ログアウト", destroy_admin_session_path, method: :delete, class: "btn btn-warning" %>
-          </li>
-        <!-- 会員ログイン後 -->
-        <% elsif customer_signed_in? %>
-          <li class = "nav-item ml-5 pt-2 text-light">
-            ようこそ、<%= current_customer.family_name %><%= current_customer.first_name %>さん！
-          </li>
-          <li class = "nav-item ml-5">
-            <%= link_to "マイページ", customers_path, class: "btn btn-info" %>
-          </li>
-          <li class = "nav-item ml-5">
-            <%= link_to "商品一覧", items_path, class: "btn btn-info" %>
-          </li>
-          <li class = "nav-item ml-5">
-            <%= link_to "カート", cart_items_path, class: "btn btn-info" %>
-          </li>
-          <li class = "nav-item mr-5 ml-5">
-            <%= link_to "ログアウト", destroy_customer_session_path, method: :delete, class: "btn btn-warning" %>
-          </li>
-        <!-- ログイン前 -->
-        <% else %>
-          <li class = "nav-item ml-5">
-            <%= link_to "About", homes_about_path, class: "btn btn-info" %>
-          </li>
-          <li class = "nav-item ml-5">
-            <%= link_to "商品一覧", items_path, class: "btn btn-info" %>
-          </li>
-          <li class = "nav-item ml-5">
-            <%= link_to "新規登録", new_customers_registration_path, class: "btn btn-info" %>
-          </li>
-          <li class = "nav-item mr-5 ml-5">
-            <%= link_to "ログイン", new_customer_session_path, class: "btn btn-warning" %>
-          </li>
+          <div class = "row w-100">
+            <div class = "col-md-12 text-right">
+              <%= form_tag(admins_searches_path, method: :get) do %>
+                <%= text_field_tag(:word) %>
+                <%= select_tag 'range', options_for_select([['会員検索','1'],['商品検索','2']]) %>
+                <%= submit_tag '検索', class: "btn btn-primary" %>
+              <% end %>
+            </div>
+          </div>
         <% end %>
-      </ul>
-    </div>
-  </nav>
-
-  <% if admin_signed_in? %>
-    <div class = "row w-100">
-      <div class = "col-md-12 text-right">
-        <%= form_tag(admins_searches_path, method: :get) do %>
-          <%= text_field_tag(:word) %>
-          <%= select_tag 'range', options_for_select([['会員検索','1'],['商品検索','2']]) %>
-          <%= submit_tag '検索', class: "btn btn-primary" %>
-        <% end %>
-      </div>
-    </div>
-  <% end %>
-</header><!-- /header -->
+      </header><!-- /header -->
     <%= yield %>
-  <footer class="container-fluid mt-4">
-    <div class=" container mw-100 " style="height: 50px;"></div>
-    <div class=" container mw-100 bg-success fixed-bottom " style="height: 50px;">
-        <div class="row justify-content-center py-2">
-          ©2020 example
+    <footer class="container-fluid mt-4">
+      <div class=" container mw-100 " style="height: 50px;"></div>
+        <div class=" container mw-100 bg-success fixed-bottom " style="height: 50px;">
+            <div class="row justify-content-center py-2">
+              ©2020 example
+            </div>
         </div>
-    </div>
+      </div>
+    </footer>
   </body>
 </html>
