--- a/app/views/admins/items/show.html.erb
+++ b/app/views/admins/items/show.html.erb
@@ -41,10 +41,10 @@
 
 			<div class = "row mb-4">
 				<div class = "col-md-6">
-					税抜価格（税込価格）
+					税込価格（税抜価格）
 				</div>
 				<div class = "col-md-6">
-					<%= @item.price %>（<%= @price_tax.floor %>）円
+					<%= @price_tax.floor %>（<%= @item.price %>）円
 				</div>
 			</div>
 
