--- a/app/views/admins/customers/index.html.erb
+++ b/app/views/admins/customers/index.html.erb
@@ -30,9 +30,9 @@
 					<td><%= customer.email %></td>
 					<td>
 						<% if customer.is_deleted == false %>
-							有効会員
+							有効
 						<% elsif customer.is_deleted == true %>
-							退会済み
+							退会済
 						<% end %>
 					</td>
 				</tr>
