--- a/app/views/admins/items/edit.html.erb
+++ b/app/views/admins/items/edit.html.erb
@@ -80,7 +80,7 @@
 
 		<div class = "row">
 			<div class = "col-md-11 clearfix">
-				<%= f.submit '変更を保存する', class: "float-right btn btn-success rounded-pill" %>
+				<%= f.submit '変更を保存', class: "float-right btn btn-success rounded-pill" %>
 			</div>
 		</div>
 
