--- a/app/views/admins/orders/show.html.erb
+++ b/app/views/admins/orders/show.html.erb
@@ -8,7 +8,7 @@
 		</div>
 	</div>
 
-	<table class="table">
+	<table class="table table-borderless">
 		<tbody>
 			<tr>
 				<th>購入者</th>
@@ -21,7 +21,8 @@
 			</tr>
 			<tr>
 				<th>配送先</th>
-				<td><%= @order.shipping_address %></td>
+				<td>〒<%= @order.shipping_address %><br>
+				      <%= @order.delivery_name %></td>
 			</tr>
 			<tr>
 				<th>支払方法</th>
@@ -39,7 +40,7 @@
 		</tbody>
 	</table>
 
-	<table class="table table-striped">
+	<table class="table table-striped" style="border:1;" align="left">
 		<thead>
 			<tr>
 				<th>商品名</th>
@@ -69,7 +70,7 @@
 		</tbody>
 	</table>
 
-	<table class="table">
+	<table border="1">
 		<tbody>
 			<tr>
 				<th>商品合計</th>
