--- a/app/views/customers/orders/show.html.erb
+++ b/app/views/customers/orders/show.html.erb
@@ -5,7 +5,7 @@
 			<!-- 注文情報 -->
 			<div class="row col-8">
 				<h6>注文情報</h6>
-				<table class="table table-">
+				<table class="table table-bordered">
 					<tbody>
 						<tr>
 							<th class="table-active">注文日</th>
